src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: digit;
  src: url(/fonts/alarm-clock.ttf);
}

@layer components {
  /*****************************/
  /***** DEFAULT SETTINGS  *****/
  /*****************************/
  :root {
    font-synthesis: none;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    -webkit-text-size-adjust: 100%;

    --bkg: rgb(30, 30, 30);
    --bkg-light: rgb(186, 186, 186);
    --text-light: rgb(212, 212, 212);
    --text-dark: rgb(34, 34, 34);
    --icon-gray: rgb(90, 90, 90);
    --accent: rgb(0, 122, 204);
    --accent-2: hsl(358, 79%, 66%);
    --accent-3: hsl(41, 79%, 66%);
    --accent-4: hsl(0, 67%, 38%);
  }

  html,
  nav {
    scroll-behavior: smooth;
  }

  body {
    background-color: var(--bkg);
    color: var(--text-dark);
    text-align: justify;
    animation: fade-in 3s;
    text-shadow: 1px 1px 0px #00000010;
    overflow-x: hidden;
  }

  .dark body {
    color: var(--text-light);
  }

  br {
    height: 1rem;
  }

  p {
    margin-bottom: 1rem;
  }

  h5,
  .info h2 {
    font-size: 1.2rem;
    font-weight: bold;
    border-bottom: 1px solid var(--accent);
    width: fit-content;
  }

  h3 {
    font-size: 1.5rem;
    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
    color: white;
  }

  h4 {
    font-size: 1.4rem;
    font-weight: 600;
    border-bottom: 1px solid var(--text-dark);
    padding: 3px 0;
    margin-bottom: 10px;
    margin-bottom: 0.5rem;
  }

  .dark h4 {
    border-bottom: 1px solid var(--accent);
  }

  svg:hover {
    cursor: pointer;
  }

  ol > li::marker {
    font-weight: bold;
    color: var(--accent-4);
  }
  .dark ol > li::marker {
    color: var(--accent-2);
  }
  /************************************/
  /**********  CUSTOM CLASS  **********/
  /************************************/
  input[type="number"]::-webkit-inner-spin-button,
  input[type="number"]::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
  }

  /***** IMAGES GRID PHOTO SIGNATURE *****/
  .photo-container:hover .photo-div {
    visibility: visible;
    animation: fade-in 1s forwards;
  }
  .random-img {
    animation: fade-in 1s forwards;
  }
  /***** SCROLL BLOCKED ON FULLSCREEN PHOTO *****/
  .site-overflow {
    overflow: hidden;
  }
  /***** BACKGROUND *****/
  .bkg-texture {
    background-image: url(/src/assets/binding_light.png);
  }

  .dark .bkg-texture {
    background-image: url(/src/assets/binding_dark.png);
  }

  .bkg-sides {
    background-color: #888;
  }

  /***** FIRST LETTER IN ARTICLE *****/
  .first-letter {
    font-size: 3rem;
    line-height: 44px;
    margin-right: 4px;
    float: left;
  }

  /***** GO UP BUTTON ANIMATION *****/
  .btn-up {
    animation: fade-in 2s;
  }

  /***** LIGHTHOUSE TECH DATA LI *****/
  .li-span {
    color: rgb(230, 230, 230);
    font-weight: 500;
  }
  .dark .li-span {
    color: #acacac;
  }

  /***** LOADING RING ICON ANIMATION *****/
  .loading-icon {
    animation:
      rotation 1s linear infinite,
      fade-delay 1s linear forwards;
  }

  @keyframes rotation {
    0% {
      transform: rotate(0deg);
    }
    100% {
      transform: rotate(360deg);
    }
  }

  @keyframes fade-delay {
    0% {
      opacity: 0;
    }
    20% {
      opacity: 0;
    }
    100% {
      opacity: 1;
    }
  }
  /***** RANDOM IMG GRID ON HOME PAGE *****/
  /* .img-grid > div:last-child,
  .img-grid > div:nth-last-child(2) {
    flex-grow: 0;
  } */

  @keyframes fade-in {
    from {
      opacity: 0;
    }
    to {
      opacity: 1;
    }
  }
  /***** HEADER SECTION ARROWS *****/
  .arrow-up-down:hover .arrow-up {
    animation: up-anim 1s 0.3s infinite linear;
    scale: 125%;
  }
  .arrow-up-down:hover .arrow-down {
    animation: down-anim 1s 0.3s infinite linear;
    scale: 125%;
  }

  @keyframes up-anim {
    0%,
    50% {
      transform: translateY(0);
    }
    25% {
      transform: translateY(-2px);
    }
    75% {
      transform: translateY(2px);
    }
  }
  @keyframes down-anim {
    0%,
    50% {
      transform: translateY(0) rotate(180deg);
    }
    25% {
      transform: translateY(2px) rotate(180deg);
    }
    75% {
      transform: translateY(-2px) rotate(180deg);
    }
  }
}

.leaflet-marker-icon {
  filter: drop-shadow(5px 1px 3px rgba(0, 0, 0, 0.4)) brightness(1.1);
}
.leaflet-marker-icon:hover {
  filter: drop-shadow(5px 1px 3px rgba(0, 0, 0, 0.4)) brightness(1.3);
}

.leaflet-popup-content a {
  color: black;
  transition: color 0.3s;
}
.leaflet-popup-content a:hover {
  color: var(--accent);
}

.comment {
  animation: comments-fade-in 1s forwards;
}

.comment:hover .edit-btn {
  opacity: 1;
}

.info:hover .edit-btn {
  opacity: 1;
}

@keyframes comments-fade-in {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

img {
  -webkit-user-drag: none;
}

/* .admin-avatar {
  background-image: url(/src/assets/avatar.jpg);
  background-size: contain;
} */

section {
  scroll-margin-top: 80px; /* wysokość navbara */
}

